--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,50 +1,55 @@
 [versions]
-kotlin               = "1.9.0"
-agp                  = "8.11.1"
-appcompat            = "1.6.1"
-material             = "1.8.0"
-constraintlayout     = "2.1.4"
-navigation            = "2.5.3"
-webkit               = "1.8.0"
-core-ktx             = "1.9.0"
-junit                = "4.13.2"
-ext-junit            = "1.1.5"
-espresso-core        = "3.5.1"
-jsoup                = "1.15.4"
-gson                  = "2.8.9"
-gson-v2101           = "2.10.1"
-work-runtime-ktx     = "2.8.1"
-listenablefuture     = "1.1.0"
-retrofit             = "2.9.0"
-converter-gson       = "2.9.0"
-logging-interceptor  = "4.9.3"
-guava                = "31.1-android"
-glide                = "4.14.2"
+kotlin             = "1.9.0"
+agp                = "8.11.0"
+appcompat          = "1.6.1"
+material           = "1.8.0"
+constraintlayout   = "2.1.4"
+navigation         = "2.5.3"
+webkit             = "1.8.0"
+core-ktx           = "1.9.0"
+junit              = "4.13.2"
+ext-junit          = "1.1.5"
+espresso-core      = "3.5.1"
+jsoup              = "1.15.4"
+gson               = "2.8.9"
+gson-v2101         = "2.10.1"
+retrofit           = "2.9.0"
+converter-gson     = "2.9.0"
+logging-interceptor = "4.9.3"
+work-runtime-ktx   = "2.8.1"
+listenablefuture   = "1.1.0"
+guava              = "31.1-android"
+glide              = "4.14.2"
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android      = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 
 [libraries]
-appcompat           = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
-material            = { module = "com.google.android.material:material", version.ref = "material" }
-constraintlayout    = { module = "androidx.constraintlayout:constraintlayout", version.ref = "constraintlayout" }
-navigation-fragment = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigation" }
-navigation-ui       = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigation" }
-webkit              = { module = "androidx.webkit:webkit", version.ref = "webkit" }
-core-ktx            = { module = "androidx.core:core-ktx", version.ref = "core-ktx" }
-junit               = { module = "junit:junit", version.ref = "junit" }
-ext-junit           = { module = "androidx.test.ext:junit", version.ref = "ext-junit" }
-espresso-core       = { module = "androidx.test.espresso:espresso-core", version.ref = "espresso-core" }
-jsoup               = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
-gson                = { module = "com.google.code.gson:gson", version.ref = "gson" }
-gson-v2101          = { module = "com.google.code.gson:gson", version.ref = "gson-v2101" }
-work-runtime-ktx    = { module = "androidx.work:work-runtime-ktx", version.ref = "work-runtime-ktx" }
-listenablefuture    = { module = "com.google.guava:listenablefuture", version.ref = "listenablefuture" }
-retrofit            = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
-converter-gson      = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converter-gson" }
-logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "logging-interceptor" }
-guava               = { module = "com.google.guava:guava", version.ref = "guava" }
-glide               = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
-glide-compiler      = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
-compiler            = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
+appcompat             = { group = "androidx.appcompat",           name = "appcompat",             version.ref = "appcompat" }
+material              = { group = "com.google.android.material",  name = "material",              version.ref = "material" }
+constraintlayout      = { group = "androidx.constraintlayout",    name = "constraintlayout",      version.ref = "constraintlayout" }
+navigation-fragment   = { group = "androidx.navigation",         name = "navigation-fragment-ktx", version.ref = "navigation" }
+navigation-ui         = { group = "androidx.navigation",         name = "navigation-ui-ktx",      version.ref = "navigation" }
+webkit                = { group = "androidx.webkit",             name = "webkit",                version.ref = "webkit" }
+webkit-v180           = { group = "androidx.webkit",             name = "webkit",                version.ref = "webkit" }
+core-ktx              = { group = "androidx.core",               name = "core-ktx",             version.ref = "core-ktx" }
+
+junit                 = { group = "junit",                       name = "junit",                version.ref = "junit" }
+ext-junit             = { group = "androidx.test.ext",           name = "junit",                version.ref = "ext-junit" }
+espresso-core         = { group = "androidx.test.espresso",       name = "espresso-core",        version.ref = "espresso-core" }
+
+jsoup                 = { group = "org.jsoup",                   name = "jsoup",                version.ref = "jsoup" }
+gson                  = { group = "com.google.code.gson",        name = "gson",                 version.ref = "gson" }
+gson-v2101            = { group = "com.google.code.gson",        name = "gson",                 version.ref = "gson-v2101" }
+retrofit              = { group = "com.squareup.retrofit2",      name = "retrofit",             version.ref = "retrofit" }
+converter-gson        = { group = "com.squareup.retrofit2",      name = "converter-gson",       version.ref = "converter-gson" }
+logging-interceptor   = { group = "com.squareup.okhttp3",        name = "logging-interceptor",  version.ref = "logging-interceptor" }
+
+work-runtime-ktx      = { group = "androidx.work",               name = "work-runtime-ktx",     version.ref = "work-runtime-ktx" }
+listenablefuture      = { group = "com.google.guava",             name = "listenablefuture",     version.ref = "listenablefuture" }
+guava                 = { group = "com.google.guava",             name = "guava",                version.ref = "guava" }
+
+glide                 = { group = "com.github.bumptech.glide",    name = "glide",                version.ref = "glide" }
+glide-compiler        = { group = "com.github.bumptech.glide",    name = "compiler",             version.ref = "glide" }
+compiler              = { group = "com.github.bumptech.glide",    name = "compiler",             version.ref = "glide" }
