--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,24 +1,24 @@
 [versions]
 kotlin             = "2.2.0"
-agp                = "8.11.1"
+agp                = "8.12.0"
 appcompat          = "1.7.1"
 material           = "1.12.0"
-constraintlayout   = "2.2.0"
-navigation         = "2.8.5"
+constraintlayout   = "2.2.1"
+navigation         = "2.9.3"
 swiperefreshlayout = "1.1.0"
-webkit             = "1.12.1"
+webkit             = "1.14.0"
 core-ktx           = "1.16.0"
 junit              = "4.13.2"
-ext-junit          = "1.2.1"
-espresso-core      = "3.6.1"
-jsoup              = "1.18.3"
-gson               = "2.11.0"
-retrofit           = "2.11.0"
-converter-gson     = "2.11.0"
-logging-interceptor = "4.12.0"
-work-runtime-ktx   = "2.10.0"
-listenablefuture   = "1.1.0"
-guava              = "33.3.1-android"
+ext-junit          = "1.3.0"
+espresso-core      = "3.7.0"
+jsoup              = "1.21.1"
+gson               = "2.13.1"
+retrofit           = "3.0.0"
+converter-gson     = "3.0.0"
+logging-interceptor = "5.1.0"
+work-runtime-ktx   = "2.10.3"
+listenablefuture   = "9999.0-empty-to-avoid-conflict-with-guava"
+guava              = "33.4.8-android"
 glide              = "4.16.0"
 
 [plugins]
